--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 </li>
 
                 <li>
-                    <a href="#">Ciencia</a>
+                    <a href="https://zonacnewscard.github.io/ciencia-/">Ciencia</a>
                 </li>
                 <li>
-                    <a href="">Tecnologia</a>
+                    <a href="https://zonacnewscard.github.io/tecnologia/">Tecnologia</a>
                 </li>
                 <li>
-                    <a href="">Inteligencia artificial</a>
+                    <a href="https://zonacnewscard.github.io/Inteligencia/">Inteligencia artificial</a>
                 </li>
             
                 <li>
-                    <a href="">Ciberseguridad </a>
+                    <a href="https://zonacnewscard.github.io/ciberseguridad/">Ciberseguridad </a>
                 </li>
                 <li>
                     <a href="">Biblioteca</a>
