--- a/index.html
+++ b/index.html
@@ -122,15 +122,13 @@
         <section class="social">
             <p>Follow TechNews</p>
             <div class="links">
-                <a href="#">
+                <a href="https://www.facebook.com/Zonacnews-109745908000172/">
                     <i class="fab fa-facebook-f"></i>
                 </a>
-                <a href="#">
+                <a href=" https://twitter.com/ZonaCNews1?s=08">
                     <i class="fab fa-twitter"></i>
                 </a>
-                 <a href="#">
-                    <i class="fab fa-linkedin"></i>
-                </a>
+
             </div>
         </section>
 
